--- a/Utils/format.yaml
+++ b/Utils/format.yaml
@@ -1,3 +1,3 @@
-base_path: D:\Competetion_data\Ostracods_data
+base_path: D:\Ostracod_id\data
 dst_path: D:\Competetion_data\Ostracods_data
 error_path: D:\Competetion_data\Ostracods_data\error_record.csv
